--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -2,8 +2,8 @@
 
 <h3>Add item to wishlist</h3>
 
-<from asp-action="create">
+<form asp-action="create">
     <input asp_for="Description" />
     <span asp-validation-for="Description"></span>
     <button type="submit">Add item</button>
-</from>
+</form>
